# demo-dicom-circle-finder

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
dicom_circle_finder/: __main__.py  core.py  dicom_processing_utils.py
tests/: context.py  test_dicom_processing_utils.py
