[metadata]
name = dicom_circle_finder
version = 0.0.1

[options]
packages = dicom_circle_finder
install_requires =
    opencv-python
    pydicom
    matplotlib
    numpy; python_version >= "3.7"

[options.entry_points]
console_scripts =
    dicom-circle-finder = dicom_circle_finder.core:main
